# lcevc-stream-analyzer

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeSources.cmake  CONTRIBUTING.md  COPYING  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: main.yml
cmake/: build_ffmpeg.cmake  download_ffmpeg.cmake  download_gtest.cmake  project_version.cmake
src/: config.cpp  config.h  config_types.h  main.cpp
src/app/: analyze.cpp  analyze.h  config.cpp  config.h  config_types.h  main.cpp  simulate_buffer.cpp  simulate_buffer.h
src/extractor/: extractor.cpp  extractor.h  extractor_bin.cpp  extractor_bin.h  extractor_demuxer.cpp  extractor_demuxer.h  extractor_lcevc.cpp  extractor_lcevc.h  extractor_mp4.cpp  extractor_mp4.h  extractor_sei.cpp  extractor_sei.h
src/helper/: base_type.h  entropy_decoder.cpp  entropy_decoder.h  extracted_frame.h  frame_queue.h  frame_timestamp.cpp  frame_timestamp.h  input_detection.cpp  input_detection.h  lcevc_bin.cpp  lcevc_bin.h  nal_unit.cpp  nal_unit.h  reorder.cpp  reorder.h  stream_reader.cpp  stream_reader.h
src/io/: file_io.cpp  file_io.h
src/parser/: parsed_frame.cpp  parsed_frame.h  parsed_types.h  parser.cpp  parser.h
src/simulate_buffer/: simulate_buffer_algorithm.cpp  simulate_buffer_algorithm.h  simulate_buffer_algorithm_internal.h  simulate_buffer_plot.py
src/sink/: sink.cpp  sink.h  sink_bin.cpp  sink_bin.h  sink_null.h  sink_raw.cpp  sink_raw.h
src/utility/: base_type.cpp  base_type.h  bit_field.h  byte_order.h  enum_map.h  file_io.cpp  file_io.h  format_attribute.h  input_detection.cpp  input_detection.h  json_util.cpp  json_util.h  log_util.h  math_util.h  multi_byte.h  nal_header.cpp  nal_header.h  nal_unit.cpp  nal_unit.h  output_util.cpp  output_util.h  platform.cpp  platform.h  span.h  string_util.cpp  string_util.h  types_util.h  unsigned_exp_golomb.h  value_string_map.h
tests/: CMakeLists.txt  stream_reader_test.cpp
tests/unit/: CMakeLists.txt  input_detection_test.cpp  math_util_test.cpp  multi_byte_decode_test.cpp  nal_header_test.cpp  simulate_buffer_algorithm_test.cpp  stream_reader_test.cpp  timestamp_validation_test.cpp
